Save code files of projects correctly.

Script files that were added to project after initial project creation
were not being saved. Upon reopening the project, these script files
would be missing and potentially irrecoverable. Script files were also
not being closed in the actual editor.

-Rocs now prompts user to name the untitled script that is created for
all new projects if the user decides to save the new project.
-Script files that are added to the project after initial project
creation are saved to it.
-When the user closes a project, script files open in the editor are now
closed.
-Scripts can now only be saved if the project has been saved.
-Scripts are given unique names to prevent files from being overwritten.

BUG: 321029
REVIEW: 110999